--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ URL: https://github.com/grantmcdermott/ritest
 BugReports: https://github.com/grantmcdermott/ritest/issues
 Imports: 
     data.table,
+    parallel,
     fixest (>= 0.9.0)
 Suggests: 
     tinytest
