--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ BugReports: https://github.com/grantmcdermott/ritest/issues
 Imports: 
     data.table,
     parallel,
+    parallelly,
     fixest (>= 0.9.0)
 Suggests: 
     tinytest
