--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Author@R: c(person(given = "Grant",
                    comment = c(ORCID = "0000-0001-7883-8573")),
             person(given = "Simon",
                    family = "Heß",
-                   role = c("ctb"))
+                   role = c("ctb")))
 Maintainer: <grantmcd@uoregon.edu>
 Description: An experimental port of the `ritest` Stata routine by Simon Heß.
     Fast and user-friendly. Aims to support a variety of model classes once it 
