Fix test and NAMESPACE CMD stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,18 @@ S3method(plot,ritest)
 S3method(print,ritest)
 export(ritest)
 import(data.table)
+importFrom(grDevices,rgb)
+importFrom(graphics,abline)
+importFrom(graphics,hist)
+importFrom(graphics,title)
+importFrom(stats,.lm.fit)
+importFrom(stats,coefficients)
+importFrom(stats,complete.cases)
+importFrom(stats,confint)
+importFrom(stats,density)
+importFrom(stats,model.matrix)
+importFrom(stats,qnorm)
+importFrom(stats,sd)
+importFrom(utils,capture.output)
+importFrom(utils,head)
+importFrom(utils,tail)
