--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,12 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/grantmcdermott/ritest
 BugReports: https://github.com/grantmcdermott/ritest/issues
-Imports: 
+Imports:
+    utils,
+    stats,
     data.table,
+    grDevices, 
+    graphics, 
     parallel,
     parallelly,
     fixest (>= 0.9.0)
