--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ritest
 Type: Package
-Title: Random Inference Testing
+Title: Randomisation Inference Testing
 Version: 0.1.0
 Authors@R: c(
     person(given = "Grant",
