Add progress bar and utilise pbapply shortcuts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,hist)
 importFrom(graphics,title)
+importFrom(pbapply,pbsapply)
 importFrom(stats,.lm.fit)
 importFrom(stats,coefficients)
 importFrom(stats,complete.cases)
