--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Suggests:
     broom,
     covr,
     knitr,
-    rmarkdown
+    rmarkdown,
+    modelsummary
 RoxygenNote: 7.1.2
 Depends: 
     R (>= 2.10)
