Use bslib styling

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,12 @@
 url: http://grantmcdermott.com/ritest
+
 template:
   bootstrap: 5
+  bslib:
+    primary: "#0054AD"
+    border-radius: 0.5rem
+    btn-border-radius: 0.25rem
+
 reference:
 - title: "Main functions"
   desc: "Main functions and methods"
