--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,13 +6,13 @@ Authors@R: c(
     person(given = "Grant",
            family = "McDermott",
            role = c("aut", "cre"),
-           email = "grantmcd@uoregon.edu",
+           email = "contact@grantmcdermott.com",
            comment = c(ORCID = "0000-0001-7883-8573")),
     person(given = "Simon",
            family = "Heß",
            role = "ctb")
            )
-Maintainer: <grantmcd@uoregon.edu>
+Maintainer: <contact@grantmcdermott.com>
 Description: An experimental port of the `ritest` Stata routine by Simon Heß.
     Fast and user-friendly. Aims to support a variety of model classes once it 
     is fully baked.
